# cod-asset-importer

./: .gitignore  .gitmodules  Cargo.toml  README.md  go.work  go.work.sum  pyproject.toml  requirements.txt  setup.py
cod_asset_importer/: __init__.py  importer.py  interface.pyi  log.py
release/: release.py  release.sh
rust/cod_asset_importer/: Cargo.toml
rust/cod_asset_importer/src/: lib.rs  loaded_assets.rs  loader.rs  main.rs.txt  thread_pool.rs  wait_group.rs
rust/cod_asset_importer/src/assets/: ibsp.rs  iwi.rs  material.rs  mod.rs  xmodel.rs  xmodelpart.rs  xmodelsurf.rs
rust/cod_asset_importer/src/utils/: binary.rs  decode.rs  error.rs  log.rs  math.rs  mod.rs  path.rs
scripts/: build_assets.sh  build_importer.sh
src/: __init__.py  cod_asset_importer.py  lib.rs  loaded_assets.rs  loader.rs  main.rs  utils.py  xmodel.py  xmodelpart.py  xmodelsurf.py
templates/: bsp_template.bt  cod1_xmodel_template.bt  cod2_material_template.bt  cod2_xanim_template.bt  cod2_xmodel_template.bt  cod4_material_template.bt  cod4_xmodel_template.bt  cod4_xmodelsurf_template.bt  d3dbsp_template.bt  ibsp_template_v4.bt  ibsp_template_v59.bt  iwi_template.bt  material_template.bt  material_template_v20.bt  material_template_v25.bt  texture_template.bt  xanim_template_v20.bt  xmodel_template.bt  xmodel_template_v14.bt  xmodel_template_v25.bt  xmodel_template_v62.bt  xmodelpart_template.bt  xmodelpart_template_v14.bt  xmodelpart_template_v20.bt  xmodelsurf_template.bt  xmodelsurf_template_v14.bt  xmodelsurf_template_v20.bt  xmodelsurf_template_v25.bt  xmodelsurf_template_v62.bt
(+42 files in other folders)
