[package]
name = "cod_asset_importer"
version = "1.0.0"
authors = ["Soma Rádóczi"]
edition = "2021"

[lib]
name = "cod_asset_importer"
crate-type = ["cdylib"]
path = "./src/lib.rs"

[dependencies]
crossbeam-utils = "0.8.16"
pyo3 = { version = "0.20.0", features = ["extension-module", "abi3", "abi3-py38"]}
rayon = "1.8.0"
regex = "1.9.1"
serde_json = "1.0.103"
valid_enum = { version = "*", path = "../valid_enum"}

